frontend/test/should_pass/induced_101.grg
rule r {
    x:Node;
    induced(x);

	replace {
	}
}

