frontend/test/should_fail/independent_006.grg
rule r : (Node)
{
	independent {
		x:Node;
		return (x);
	}

	replace {
		x:Node;
		return (x);
	}
}
